[gd_scene load_steps=5 format=3 uid="uid://cuhh1246vnmup"]

[ext_resource type="Texture2D" uid="uid://b24ixacs8o6cx" path="res://Assets/UI/instructions.png" id="1_iyawr"]
[ext_resource type="Script" path="res://Scripts/folder_tuto.gd" id="2_qhjjk"]
[ext_resource type="Texture2D" uid="uid://sxym2iytf8sr" path="res://Assets/UI/instructions_shadow.png" id="3_7bs0m"]
[ext_resource type="AudioStream" uid="uid://buiicqt31osed" path="res://Assets/music/paper.wav" id="4_k41eq"]

[node name="Folder" type="Sprite2D"]
z_index = 5
texture = ExtResource("1_iyawr")
script = ExtResource("2_qhjjk")

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, 5)
texture = ExtResource("3_7bs0m")
offset = Vector2(0, 6)

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -361.0
offset_right = -15.0
offset_bottom = -273.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.131652

[node name="PaperTouch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_k41eq")
volume_db = -5.0

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
